--- a/views/login.ejs
+++ b/views/login.ejs
@@ -45,7 +45,7 @@
         </div>
         </nav>
 		<div class="container">
-			<form class="form-horizontal" id="login-form" action="/login" method="post">
+			<form class="form-horizontal" id="login-form" action="/admin/login" method="post">
 				<div class="input-group">
 					<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
 						<input name="username" id="user" type="text" placeholder="Username" class="form-control" value="">
