--- a/views/clientsList.ejs
+++ b/views/clientsList.ejs
@@ -44,7 +44,6 @@
                             <th class="col-md-2"><small>Room ID</small></th>
                             <th class="col-md-1"><small>Namespace</small></th>
                             <th class="col-md-2"><small>Time Connected</small></th>
-                            <th class="col-md-2"><small>Time Idle</small></th>
                             <th class="col-md-4"><small>Remote Address</small></th>
                         </tr>
                     </thead>
@@ -149,11 +148,10 @@ $(function ()
 
             $('#user-table tbody').append(`
             <tr>
-                <td><a href="/profile/${client.user_id}">${client.username}</a></td>
+                <td><a href="#">${client.username}</a></td>
                 <td><a href="/editor/${client.roomId}" target="_blank">${client.roomId}</a></td>
                 <td>${client.namespace}</td>
                 <td>${moment(client.connectedTime).local().fromNow()}</td>
-                <td>${moment(client.lastUpdateTime).local().fromNow()}</td>
                 <td>${client.remoteAddress}</td>
             </tr>
             `);
