--- a/views/editor/editor.ejs
+++ b/views/editor/editor.ejs
@@ -714,9 +714,6 @@
             var username = data.user;
             var msg = data.message;
 
-            if (msg == undefined)
-                return;
-
             // decrypt
             var text = decrypt(msg, key);
 
@@ -766,7 +763,7 @@
         {
             var msg = $('#chat-panel-msg').val();
 
-            if (msg == undefined)
+            if (!msg)
                 return;
 
             var encrypted_msg = encrypt(msg, key);
